--- a/styles/style.css
+++ b/styles/style.css
@@ -102,8 +102,16 @@ body {
     border: 0.5px solid #00000065;
 }
 
-.snake {
-    background-color: green;
+.snake-head {
+    background-color: darkgreen; /* Цвет головы */
+}
+
+.snake-body {
+    background-color: green; /* Цвет тела */
+}
+
+.snake-tail {
+    background-color: lightgreen; /* Цвет хвоста */
 }
 
 .apple {
