--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,18 @@ body {
     margin: 0 auto;
 
     background-color: rgba(0, 0, 0, 0.062);
+
+    background-image: 
+        linear-gradient(white 1px, transparent 1px),
+        linear-gradient(90deg, white 1px, transparent 1px);
+
+    background-size: 
+        60px 60px,
+        60px 60px;
+        
+    background-position: 
+    -0.5px -0.5px,
+    -0.5px -0.5px;
 }
 
 #restartButton {
@@ -98,23 +110,33 @@ body {
 .cell {
     width: 60px;
     height: 60px;
-    background-color: rgba(252, 252, 252, 0.274);
-    border: 0.5px solid #00000065;
+
+    align-self: center;
+    justify-self: center;
 }
 
 .snake-head {
-    background-color: darkgreen;
+    background-color: rgb(0, 110, 0);
+    border-radius: 10px;
+    height: 90%;
+    width: 90%;
 }
 
 .snake-body {
-    background-color: green;
+    background-color: rgb(0, 140, 0);
+    border-radius: 10px;
+    height: 80%;
+    width: 80%;
 }
 
 .snake-tail {
-    background-color: lightgreen;
+    background-color: rgb(0, 170, 0);
+    border-radius: 10px;
+    height: 70%;
+    width: 70%;  
 }
 
 .apple {
-    background-color: red;
-    border-radius: 50%;
+    background: url(../apple.svg);
+    background-size: contain;
 }
