--- a/styles/style.css
+++ b/styles/style.css
@@ -117,21 +117,21 @@ body {
 
 .snake-head {
     background-color: rgb(0, 110, 0);
-    border-radius: 10px;
+    border-radius: 20%;
     height: 90%;
     width: 90%;
 }
 
 .snake-body {
     background-color: rgb(0, 140, 0);
-    border-radius: 10px;
+    border-radius: 20%;
     height: 80%;
     width: 80%;
 }
 
 .snake-tail {
     background-color: rgb(0, 170, 0);
-    border-radius: 10px;
+    border-radius: 20%;
     height: 70%;
     width: 70%;  
 }
@@ -139,4 +139,116 @@ body {
 .apple {
     background: url(../apple.svg);
     background-size: contain;
+}
+
+@media (max-width: 768px) {
+    #snakeGame {
+        max-width: 600px;
+        max-height: 600px;
+    }
+
+    #gameInfo {
+        max-width: 600px;
+        max-height: 600px;
+    }
+    
+    #gameField {
+        max-width: 500px;
+        max-height: 500px;
+
+        grid-template-columns: repeat(10, 50px);
+        grid-template-rows: repeat(10, 50px);
+
+        background-size: 
+            50px 50px,
+            50px 50px;
+    }
+
+    #restartButton {
+        margin: -50px auto 0;
+    }
+
+    .cell {
+        max-width: 50px;
+        max-height: 50px;
+    }
+}
+
+@media (max-width: 576px) {
+    #snakeGame {
+        max-width: 450px;
+        max-height: 450px;
+    }
+
+    #gameInfo {
+        max-width: 450px;
+        max-height: 450px;
+    }
+
+     #gameField {
+        max-width: 350px;
+        max-height: 350px;
+
+        grid-template-columns: repeat(10, 35px);
+        grid-template-rows: repeat(10, 35px);
+
+        background-size: 
+            35px 35px,
+            35px 35px;
+    }
+
+    .cell {
+        max-width: 35px;
+        max-height: 35px;
+    }
+
+    #scoreBoard h1 {
+        font-size: 16px;
+    }
+
+    #someText {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 450px) {
+    #snakeGame {
+        max-width: 325px;
+        max-height: 325px;
+    }
+
+    #gameInfo {
+        max-width: 325px;
+        max-height: 325px;
+    }
+
+     #gameField {
+        max-width: 250px;
+        max-height: 250px;
+
+        grid-template-columns: repeat(10, 25px);
+        grid-template-rows: repeat(10, 25px);
+
+        background-size: 
+            25px 25px,
+            25px 25px;
+    }
+
+    .cell {
+        max-width: 25px;
+        max-height: 25px;
+    }
+
+    #scoreBoard h1 {
+        font-size: 10px;
+    }
+
+    #someText {
+        font-size: 10px;
+    }
+
+    #restartButton {
+        padding: 10px 25px;
+        font-size: 10px;
+    }
 }
